--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "typescript": "^4.3.2"
   },
   "dependencies": {
-    "paperback-cli": "^1.4.0",
-    "paperback-extensions-common": "^5.0.0"
+    "paperback-cli": "2.0.0-alpha.13",
+    "paperback-extensions-common": "5.0.0-alpha.7"
   }
 }
